@@ -1,4 +1,5 @@
 master
+		- Moved RequestWithUser outside the SecureSocial controller
 		- Allow overriding Registration step redirect targets. (thanks @magro)
 		- Added the email to the flash messages in Registration.handleStartSignUp (thanks @magro)
 		- Added support for plain text, html and multipart emails in TemplatesPlugin (thanks @magro)
